--- a/WebApp/pom.xml
+++ b/WebApp/pom.xml
@@ -28,7 +28,11 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-test</artifactId>
+		<scope>test</scope>
+	</dependency>
 	<build>
 		<plugins>
 			<plugin>
